# kurz

./: Cargo.toml  README.md  schema.sql
src/: main.rs
